[package]
name = "LudumDare54"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bevy = "0.11"
bevy_asset_loader = { version = "0.17", features = ["2d"] }
rand = "0.8"
rand_pcg = "0.3"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
lazy_static = "1.4"
regex = "1"
bevy_spine = "0.6"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.bevy_rapier3d]
opt-level = 3

[[bin]]
name = "game"
path = "src/game.rs"

[[bin]]
name = "stager"
path = "src/stager.rs"